--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: 100px;
 }
 
 .squar {
@@ -40,4 +41,15 @@ section {
 .top-banner {
     background-image: url(r-pic/top2.png);
     background-repeat: no-repeat;
+}
+
+.dream-project {
+    background-image: url(r-pic/top2.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    padding-right: 5%;
+}
+
+.dream-project p {
+    padding-right: 0%;
 }
