--- a/style.css
+++ b/style.css
@@ -7,14 +7,18 @@ h1 {
     font-size: 65px;
 }
 
+h2 {
+    font-size: 40;
+}
+
 .color-web {
     color: orchid;
 
 }
 
-section {
+.flexible-container {
     display: flex;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
 }
 
 .squar {
@@ -52,4 +56,30 @@ section {
 
 .dream-project p {
     padding-right: 0%;
+}
+
+.experiance {
+    background-image: url(r-pic/top2.png);
+    background-repeat: no-repeat;
+    background-size: 10%;
+}
+
+.box-shado {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 50px grey;
+    padding: 20px;
+}
+
+#ful-stack-developer {
+    border-left: 7px solid tomato;
+}
+
+#baby-web-developer {
+    border-left: 7px solid green;
+}
+
+footer p {
+    text-align: center;
 }
